# ansible-self-service

./: .importlinter  pyproject.toml
.github/workflows/: ci.yml
ansible_self_service/: __init__.py  configparser.py  main.py
ansible_self_service/core/: application.py  models.py  protocols.py
ansible_self_service/infrastructure/: yaml_repo_config_parser.py
ansible_self_service/l1_entrypoints/cli/: __init__.py  app.py  collection.py  state.py
ansible_self_service/l2_infrastructure/: ansible_result_analyzer.py  ansible_runner.py  app_collection_config_parser.py  app_dir_locator.py  app_state_persister.py  git_client.py  logger.py  utils.py
ansible_self_service/l2_infrastructure/elevate/: __init__.py  posix.py  windows.py
ansible_self_service/l3_services/: app.py  app_catalog.py  config.py  dto.py  exceptions.py
ansible_self_service/l4_core/: application.py  exceptions.py  factories.py  models.py  protocols.py  utils.py
tests/: test_configparser.py
tests/test_infrastructure/: test_repoconfigparser.py
tests/unit/: test_ansible_self_service.py
tests/unit/l2_infrastructure/: test_ansible_result_analyzer.py  test_app_collection_config_parser.py
tests/unit/test_infrastructure/: test_repoconfigparser.py
