[tool.poetry]
name = "ansible-self-service"
version = "0.1.0"
description = "An Ansible-based self-service application for bootstrapping client machines. "
authors = ["Philipp Hossner <phil@deepl.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
PySide2 = "^5.15.2"
ansible = "^4.0.0"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
