[tool.poetry]
name = "ansible-self-service"
version = "0.1.0"
description = "An Ansible-based self-service application for bootstrapping client machines. "
authors = ["Philipp Hossner <phil@deepl.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
PySide2 = "^5.15.2"
ansible = "^4.0.0"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.8.2"
import-linter = "^1.2.1"
mypy = "^0.812"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "cyclic-import", # causes false-positives for mypy type annotations
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = pylint, mypy, lint-imports, py37, py38, py39

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39, pylint, mypy, lint-imports

[testenv]
whitelist_externals = poetry
commands =
    poetry install
    poetry run pytest tests/

[testenv:mypy]
whitelist_externals = poetry
commands =
    poetry install
    poetry run mypy ansible_self_service

[testenv:lint-imports]
whitelist_externals = poetry
commands =
    poetry install
    poetry run lint-imports

[testenv:pylint]
whitelist_externals = poetry
commands =
    poetry install
    poetry run pylint ansible_self_service
"""